--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,59 +1,54 @@
 name: Run Tests and Push Docker Image
-
+ 
 on:
   pull_request:
     branches:
       - Dev
       - QA
-      - master
+      - main
   push:
     branches:
       - Dev
       - QA
-      - master
-
-
+      - main
+ 
+ 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
- 
- 
 
+ 
 jobs:
   test:
     runs-on: ubuntu-latest
-
+ 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+ 
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18.x' 
-
+          node-version: '18.x'
+ 
       - name: Install dependencies
         run: npm install
-
+ 
       - name: Run Tests
         run: npm run test -- --watch=false --browsers=ChromeHeadless
-        
   build:
- 
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
- 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-
+ 
+ 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226
-    
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
@@ -61,14 +56,12 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
- 
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
- 
-    
+
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 
@@ -79,4 +72,3 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
- 
